@@ -1,3 +1,10 @@
+2015-07-07 S. Thiell <stephane.thiell@cea.fr>
+
+	* NodeSet: add autostep property to allow changing the way every RangeSet of
+	a NodeSet object is displayed (eg. node[2-8/2] instead of node[2,4,6,8]).
+	Autostep value is the min number of indexes that are found at equal distance
+	of each other inside a range before NodeSet starts to use this syntax.
+
 2015-05-18 S. Thiell <stephane.thiell@cea.fr>
 
 	* Version 1.6.92 released.
